2.1.0.dev0
 * TL;DR: Many logging, memory, and performance improvements. Mind those breaking changes!
 * #485: When running commands (database clients, command hooks, etc.), elevate stderr output to
   show up as borgmatic error logs.
 * #858: With the "--log-json" flag, log borgmatic's own logs as JSON, not just Borg's.
 * #1132: BREAKING/SECURITY: For the Healthchecks, Apprise, Pagerduty, and Loki monitoring hooks,
   disable log sending when not explicitly enabled. This avoids revealing private log information to
   third-party services. To send logs anyway, set the monitoring hook's "send_logs" option to
   "true".
 * #1204: When verbosity levels differ between console/monitoring/syslog/file, log Borg's output to
   each one at a different level. Previously, it was logged at the maximum level of all the
   verbosities.
 * #1208: Fix for the "restore" action incorrectly extracting more database dumps than the
   "--database" flag specifies.
 * #1210: Fix an error when running the "spot" check or "extract" action with the "progress" option
   or "--progress" flag.
 * #1211: Fix an error about the runtime directory getting excluded by tweaking its logic and
   lowering the error to a warning.
 * #1212: Fix an error when restoring multiple directory-format database dumps at once.
 * #1213: BREAKING: Support disabling both constant and variable interpolation by escaping with
   backslashes. For instance, interpret "\{name\}" as literally "{name}" instead of trying to
   resolve it as a constant/variable.
 * #1220: Cleanup snapshots immediately after ZFS, LVM, or Btrfs hooks error—rather than waiting
   until the next time borgmatic runs.
 * #1221: Add an "unsafe_skip_path_validation_before_create" option to skip pre-backup safety
   validation so as to reduce backup times on large filesystems.
 * #1224: When running an "extract" check with the "--progress" flag, show file extraction progress.