@@ -40,7 +40,22 @@ from borgmatic import execute as module
         (['borg'], 2, 'borg', [{'code': 99, 'treat_as': 'warning'}], module.Exit_status.ERROR),
         (['borg'], 2, 'borg', [{'code': 2, 'treat_as': 'warning'}], module.Exit_status.WARNING),
         (['borg'], 100, 'borg', [{'code': 1, 'treat_as': 'error'}], module.Exit_status.WARNING),
+        (['borg'], 100, 'borg', [], module.Exit_status.WARNING),
         (['borg'], 100, 'borg', [{'code': 100, 'treat_as': 'error'}], module.Exit_status.ERROR),
+        (['borg'], 101, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 101, 'borg', [{'code': 101, 'treat_as': 'warning'}], module.Exit_status.WARNING),
+        (['borg'], 102, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 102, 'borg', [{'code': 102, 'treat_as': 'warning'}], module.Exit_status.WARNING),
+        (['borg'], 103, 'borg', [], module.Exit_status.WARNING),
+        (['borg'], 103, 'borg', [{'code': 103, 'treat_as': 'error'}], module.Exit_status.ERROR),
+        (['borg'], 104, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 104, 'borg', [{'code': 104, 'treat_as': 'warning'}], module.Exit_status.WARNING),
+        (['borg'], 105, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 105, 'borg', [{'code': 105, 'treat_as': 'warning'}], module.Exit_status.WARNING),
+        (['borg'], 106, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 106, 'borg', [{'code': 106, 'treat_as': 'warning'}], module.Exit_status.WARNING),
+        (['borg'], 107, 'borg', [], module.Exit_status.ERROR),
+        (['borg'], 107, 'borg', [{'code': 107, 'treat_as': 'warning'}], module.Exit_status.WARNING),
     ),
 )
 def test_interpret_exit_code_respects_exit_code_and_borg_local_path(
